# kinect-for-linux

./: .gitignore  51-kinect.rules  90-kinect.rules  99-kinect-camera.rules  CMakeLists.txt  LICENSE  README.md  k4wd-wrapper  k4wd.service  kinect-for-linux.desktop  setup.sh  v4l2loopback.conf
include/: k4w_common.h
models/: movenet_lightning.js  movenet_lightning.tflite  pose_landmark_lite.onnx
scripts/: generate_icons.py  skeleton_tracker.py
src/ctl/: main.cpp  mainwindow.cpp  mainwindow.h  tracker.cpp  tracker.h
src/daemon/: audio.c  config.c  firmware.c  k4w_internal.h  kinect.c  main.c  motor.c  pw_source.c  pw_source.h  shm.c  socket.c  v4l2.c
src/openni2/: K4WDriver.cpp
wireplumber/: 51-kinect-audio.conf
